// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`core/layout/components/Version Version renders correctly with latest version 1`] = `
.glamor-0 {
  margin: 0;
}

<div
  className="glamor-3 ekjxbjj0"
>
  <p
    className="glamor-0 ekjxbjj1"
  >
    Version Info
  </p>
  <p
    className="glamor-0 ekjxbjj1"
  >
    Flexget:
    2.10.60
     
  </p>
  <p
    className="glamor-0 ekjxbjj1"
  >
    API:
    1.1.2
  </p>
</div>
`;

exports[`core/layout/components/Version Version renders correctly without latest version 1`] = `
.glamor-0 {
  margin: 0;
}

<div
  className="glamor-3 ekjxbjj0"
>
  <p
    className="glamor-0 ekjxbjj1"
  >
    Version Info
  </p>
  <p
    className="glamor-0 ekjxbjj1"
  >
    Flexget:
    2.10.11
     
    <a
      aria-disabled={false}
      className="MuiButtonBase-root MuiIconButton-root"
      href="https://flexget.com/ChangeLog"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
    >
      <span
        className="MuiIconButton-label"
      />
    </a>
  </p>
  <p
    className="glamor-0 ekjxbjj1"
  >
    API:
    1.1.2
  </p>
</div>
`;

exports[`core/layout/components/Version mapStateToProps should return the version 1`] = `
Object {
  "version": Object {
    "api": "1.1.2",
    "flexget": "2.10.11",
    "latest": "2.10.60",
  },
}
`;
